mTLS/destination-rules.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-user-service-istio-mutual
  namespace: default
spec:
  host: user-service-service.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-product-query-istio-mutual
  namespace: default
spec:
  host: product-query-service-service.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-product-command-istio-mutual
  namespace: default
spec:
  host: product-command-service-service.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-order-service-istio-mutual
  namespace: default
spec:
  host: order-service-service.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
